<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardCornerRadius="2dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="8dp"
    android:background="@color/card_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_sheet_title_tv"
            android:text="@string/placeholder_title"
            android:fontFamily="sans-serif"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/primary_text"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_sheet_author_tv"
            android:layout_below="@+id/guide_sheet_title_tv"
            android:layout_marginLeft="16dp"
            android:text="@string/placeholder_author"
            android:textSize="12sp"
            android:textColor="@color/secondary_text"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_sheet_count_tv"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/placeholder_number"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:fontFamily="sans-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:layout_below="@id/guide_sheet_count_tv"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:text="@string/refs"
            android:fontFamily="sans-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_sheet_desc_tv"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:layout_below="@+id/guide_sheet_divider"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/placeholder_desc"
            android:fontFamily="sans-serif" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/guide_sheet_author_tv"
            android:background="@drawable/divider_shape"
            android:id="@+id/guide_sheet_divider"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>