<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ink.designdev.materialreference.screens.MatRefActivity"
    android:background="@color/page_background">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/primary"
        android:elevation="4dp"
        android:id="@+id/references_page_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/divider"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:id="@+id/rtoolbar_title_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_title"
                android:id="@+id/rtoolbar_title_content"
                android:layout_below="@+id/rtoolbar_title_hint"
                android:layout_marginLeft="56dp"
                android:textColor="@color/white_text"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@+id/rtoolbar_title_content"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/divider"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:id="@+id/rtoolbar_desc_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_desc"
                android:id="@+id/rtoolbar_desc_content"
                android:layout_below="@+id/rtoolbar_desc_hint"
                android:layout_marginLeft="56dp"
                android:textColor="@color/white_text"
                android:fontFamily="sans-serif"
                android:textSize="16sp"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/references_page_toolbar"
        android:layout_margin="16dp"
        android:background="@color/card_background">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/references_rv"/>

    </android.support.v7.widget.CardView>

    <com.melnykov.fab.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        app:fab_colorNormal="@color/accent"
        android:src="@drawable/ic_add_white_24dp"/>

</RelativeLayout>
